--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "garaio-vscode-unwanted-recommendations",
+  "name": "vscode-unwanted-recommendations",
   "displayName": "Unwanted Recommendations",
   "description": "Check and warn for extensions which are marked as 'unwanted recommendations'.",
   "icon": "icon.png",
   "version": "0.4.0",
   "repository": {
-    "url": "https://github.com/garaio/vscode-unwanted-recommendations"
+    "url": "https://github.com/cyclodex/vscode-unwanted-recommendations"
   },
-  "publisher": "GARAIOAG",
+  "publisher": "Gander",
   "author": {
-    "email": "fabian.gander@garaio.com",
+    "email": "fabian.gander@soulcode.ch",
     "name": "Fabian Gander"
   },
   "engines": {
@@ -26,10 +26,15 @@
     "disable",
     "disable extension",
     "unwantedRecommendations",
-    "exensions.json"
+    "extensions.json",
+    "version",
+    "check",
+    "deprecated",
+    "deprecate"
   ],
   "activationEvents": [
     "workspaceContains:.vscode/extensions.json",
+    "workspaceContains:.vscode/extensionsVersionCheck.json",
     "workspaceContains:*.code-workspace"
   ],
   "main": "./out/extension.js",
