--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
+    "semver": "^7.5.4",
     "typescript": "^4.9.3"
   },
   "dependencies": {
