--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "package": "vsce package",
-    "publish": "vsce publish"
+    "package:preRelease": "vsce package --pre-release",
+    "publish": "vsce publish",
+    "publish:preRelease": "vsce publish --pre-release"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
