--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
-    "semver": "^7.5.4",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "hjson": "^3.2.2"
+    "hjson": "^3.2.2",
+    "semver": "^7.5.4"
   }
 }
