README and example update, to make clear recommendations are not supported (yet)

--- a/exampleProject/.vscode/extensionsVersionCheck.jsonc
+++ b/exampleProject/.vscode/extensionsVersionCheck.jsonc
@@ -1,7 +1,7 @@
 // Needs to be within ".vscode" folder
 // Name the file however you want, but it needs to start with "extensions" and end with ".jsonc" or ".json"
 {
-    "recommendations": [],
+    // "recommendations": [], !!! NOTE: recommendations is not yet supported/implemented !!! It could be a possible feature for the future.
     "unwantedRecommendations": [
         // Mention the extension id and the version you want to use, its enough to have 1 single definition.
         // However you can also mention the same extension id multiple times with different versions if you preffer.
