--- a/package.json
+++ b/package.json
@@ -67,22 +67,23 @@
     "pre-release": "npm run compile && npm run package:preRelease && npm run publish:preRelease"
   },
   "devDependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/hjson": "^2.4.3",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^16.0.0",
-    "@types/vscode": "^1.74.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vscode/test-electron": "^2.2.0",
-    "esbuild": "^0.19.11",
+    "@types/glob": "^8.1.0",
+    "@types/hjson": "^2.4.6",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.9.0",
+    "@types/semver": "^7.5.8",
+    "@types/vscode": "^1.95.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.0",
     "eslint": "^8.28.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.1.0",
-    "typescript": "^4.9.3"
+    "glob": "^11.0.0",
+    "mocha": "^10.8.2",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "hjson": "^3.2.2",
-    "semver": "^7.5.4"
+    "semver": "^7.6.3"
   }
 }
