--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "name": "Fabian Gander"
   },
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "1.74.0"
   },
   "categories": [
     "Other"
@@ -67,23 +67,23 @@
     "pre-release": "npm run compile && npm run package:preRelease && npm run publish:preRelease"
   },
   "devDependencies": {
-    "@types/glob": "^8.1.0",
-    "@types/hjson": "^2.4.6",
-    "@types/mocha": "^10.0.9",
-    "@types/node": "^22.9.0",
-    "@types/semver": "^7.5.8",
-    "@types/vscode": "^1.95.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
-    "@vscode/test-electron": "^2.4.1",
-    "esbuild": "^0.24.0",
-    "eslint": "^8.28.0",
-    "glob": "^11.0.0",
-    "mocha": "^10.8.2",
-    "typescript": "^5.6.3"
+    "@types/glob": "8.1.0",
+    "@types/hjson": "2.4.6",
+    "@types/mocha": "10.0.9",
+    "@types/node": "22.9.0",
+    "@types/semver": "7.5.8",
+    "@types/vscode": "1.95.0",
+    "@typescript-eslint/eslint-plugin": "8.14.0",
+    "@typescript-eslint/parser": "8.14.0",
+    "@vscode/test-electron": "2.4.1",
+    "esbuild": "0.24.0",
+    "eslint": "8.28.0",
+    "glob": "11.0.0",
+    "mocha": "10.8.2",
+    "typescript": "5.6.3"
   },
   "dependencies": {
-    "hjson": "^3.2.2",
-    "semver": "^7.6.3"
+    "hjson": "3.2.2",
+    "semver": "7.6.3"
   }
 }
